# rainbow

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
experiments/: 02_breakout.sh  03_no_priority_breakout.sh  04_no_multistep_breakout.sh  04_no_multistep_pong.sh  05_no_distributional_breakout.sh  main.py  no_distributional_pong.sh  no_priority_pong.sh  plot_results.py  pong.sh  run_all.sh
rainbow/: agent.py  env.py  memory.py  model.py  test.py
