[project]
name = "rainbow"
version = "0.1.0"
description = "Rainbow: Combining Improvements in Deep Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ale-py>=0.10.2",
    "gymnasium[atari,accept-rom-license]>=1.1.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "opencv-python-headless>=4.11.0.86",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "typer>=0.15.3",
]

[dependency-groups]
dev = [
    "prek>=0.3.6",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
